--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -3,19 +3,15 @@
   margin: 0;
   border: 0;
 }
+
 *,
-*:before,
-*:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
+*::before,
+*::after {
   box-sizing: border-box;
 }
+
 :focus,
 :active {
-  outline: none;
-}
-a:focus,
-a:active {
   outline: none;
 }
 
@@ -30,14 +26,12 @@ html,
 body {
   height: 100%;
   width: 100%;
-  font-size: 100%;
-  font-family: "Roboto", sans-serif !important;
+  font-family: Roboto, sans-serif !important;
   line-height: 1;
   font-size: 14px;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
+
 input,
 button,
 textarea {
@@ -47,23 +41,34 @@ textarea {
 input::-ms-clear {
   display: none;
 }
+
 button {
   cursor: pointer;
 }
+
 button::-moz-focus-inner {
   padding: 0;
   border: 0;
 }
+
 a,
 a:visited {
   text-decoration: none;
 }
+
 a:hover {
   text-decoration: none;
 }
+
+a:focus,
+a:active {
+  outline: none;
+}
+
 ul li {
   list-style: none;
 }
+
 img {
   vertical-align: top;
 }
