--- a/src/pages/Chat/Chat.module.scss
+++ b/src/pages/Chat/Chat.module.scss
@@ -7,15 +7,18 @@
     "bottom";
   grid-template-rows: 0.1fr 3fr 0.1fr;
 }
+
 .header {
   grid-area: header;
 }
+
 .messages {
-  margin: 0px 0px 5px 0px;
+  margin: 0 0 5px;
   grid-area: messages;
   max-height: 650px;
   overflow: auto;
 }
+
 .bottom {
   grid-area: bottom;
 }
