--- a/src/pages/User/User.module.scss
+++ b/src/pages/User/User.module.scss
@@ -1,29 +1,35 @@
 .wrapper {
   margin: 15px 10px;
 }
+
 .top {
   margin: 25px 0;
   display: flex;
   justify-content: space-between;
 }
+
 .content {
   & > strong {
     font-size: 18px;
     font-weight: 500;
   }
+
   & > p {
     margin: 10px 0;
     font-size: 16px;
   }
 }
+
 .followers {
   display: flex;
-  margin: 15px 0 30px 0;
+  margin: 15px 0 30px;
 }
+
 .follower {
   &:not(:first-child) {
     margin-left: 10px;
   }
+
   & > span {
     margin-left: 5px;
     font-size: 14px;
